# TrkHitConverter

./: .gitignore  CMakeLists.txt  README.md
doc/: notes.org
include/: TrkHitConverterProcessor.h
scripts/: steer_reco.py
src/: TrkHitConverterProcessor.cc
